# tattl

./: .gitignore  .prettierignore  .prettierrc.toml  LICENSE  README.md  Taskfile.yml  example.py  pyproject.toml
.github/workflows/: docs.yml  format.yml  publish.yml
docs/: conf.py  index-redirect.html  index.rst  reference.rst
docs/_static/css/: versions.css
docs/_static/js/: versions.js
docs/_templates/: page.html
docs/_templates/sidebar/: variant-selector.html
scripts/: build-docs.sh
src/tasl/: __init__.py
src/tattl/: __init__.py  exceptions.py  unpack.py
tests/: test_defaults.py  test_defaults_override.py  test_example.py  test_example_2.py
