[project]
name = "tattl"
version = "0.1.0"
description = "Totally Awesome Type-aware TOML Loader"
readme = "README.md"
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.mypy]
packages = "tattl"
strict = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]