[project]
name = "tattl"
version = "0.1.0"
description = "Totally Awesome Type-aware TOML Loader"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []
keywords = ["toml", "yaml", "configuration", "config", "settings", "typing", "dataclass", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed"
]

[project.urls]
github = "https://github.com/thcrt/tattl"
issues = "https://github.com/thcrt/tattl/issues"
pypi = "https://pypi.org/project/tattl/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
]

[tool.mypy]
packages = "tattl"
strict = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]